Closed
Bug 1923606
Opened 1 year ago
Closed 1 year ago
Labeled.h:33:36: error: template-id not allowed for constructor in C++20 [-Werror=template-id-cdtor]
Categories
(Developer Infrastructure :: Source Code Analysis, defect)
Developer Infrastructure
Source Code Analysis
Tracking
(firefox133 fixed)
RESOLVED
FIXED
133 Branch
| Tracking | Status | |
|---|---|---|
| firefox133 | --- | fixed |
People
(Reporter: Sylvestre, Assigned: Sylvestre)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
In file included from /root/firefox-gcc-last/obj-x86_64-pc-linux-gnu/dist/include/mozilla/glean/bindings/MetricTypes.h:14,
from /root/firefox-gcc-last/obj-x86_64-pc-linux-gnu/dist/include/mozilla/glean/GleanMetrics.h:12,
from /root/firefox-gcc-last/obj-x86_64-pc-linux-gnu/ipc/ipdl/_ipdlheaders/mozilla/dom/PContentChild.h:65,
from /root/firefox-gcc-last/obj-x86_64-pc-linux-gnu/dist/include/mozilla/dom/ContentChild.h:14,
from /root/firefox-gcc-last/browser/components/about/AboutRedirector.cpp:16:
/root/firefox-gcc-last/obj-x86_64-pc-linux-gnu/dist/include/mozilla/glean/bindings/Labeled.h:33:36: error: template-id not allowed for constructor in C++20 [-Werror=template-id-cdtor]
33 | constexpr explicit Labeled<T, E>(uint32_t id) : mId(id) {}
| ^~~~~~~~
/root/firefox-gcc-last/obj-x86_64-pc-linux-gnu/dist/include/mozilla/glean/bindings/Labeled.h:33:36: note: remove the ‘< >’
| Assignee | ||
Comment 1•1 year ago
|
||
Updated•1 year ago
|
Assignee: nobody → sledru
Status: NEW → ASSIGNED
Pushed by sledru@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/5072b1f616b5
Labeled.h Fix a gcc warning: 'template-id not allowed for constructor in C++20' r=sergesanspaille
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
status-firefox133:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 133 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•