Bug 1923606 - Labeled.h Fix a gcc warning: 'template-id not allowed for constructor in C++20' r=sergesanspaille

Differential Revision: https://phabricator.services.mozilla.com/D226592